# Ganyan

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
alembic/versions/: a8b9c0d1e2f3_add_regime_daily_table.py  b9c0d1e2f3a4_add_multi_race_pools.py  c0d1e2f3a4b5_add_multi_race_picks.py  c9d0e1f2a3b4_horse_identity_by_tjk_at_id.py  d0e1f2a3b4c5_add_agf_snapshots.py  d1e2f3a4b5c6_add_race_entry_scratched.py  (+3 more)
logs/: backfill_plase_top1.py  bayes_eval.py  bayes_skip_analysis.py  bayes_smoke.sh  bayes_today.py  bayes_train.py  cohort_filter_validation_2026-05-03.json  discordance_oos_backtest.py  linear_retrain.sh  oos_pedigree_v1.py  oos_pedigree_v1_results.json  oos_top1_backtest.py  retrain.sh  retrain_pedigree_v1.py
models/: lightgbm_ev.meta.json  lightgbm_ev.txt  lightgbm_finish_time.meta.json  lightgbm_finish_time.txt  lightgbm_ranker.meta.json  lightgbm_ranker.txt  lightgbm_spec_handikap.meta.json  lightgbm_spec_handikap.txt  lightgbm_spec_kv.meta.json  lightgbm_spec_kv.txt  lightgbm_spec_maiden.meta.json  lightgbm_spec_maiden.txt  lightgbm_spec_sartli.meta.json  lightgbm_spec_sartli.txt  lightgbm_spec_satis.meta.json  lightgbm_spec_satis.txt  lightgbm_spec_stakes.meta.json  lightgbm_spec_stakes.txt  lightgbm_value.meta.json  lightgbm_value.txt  linear_conditional_logit.meta.json  linear_conditional_logit.npz  linear_plackett_luce.meta.json  linear_plackett_luce.npz
ops/: com.ganyan.heartbeat.plist  com.ganyan.integrity.plist  com.ganyan.regime.plist
scripts/: heartbeat.sh  regime_monitor.py  scrape_integrity_check.py  validate_cohort_filter.py
(+78 files in other folders)
