[project]
name = "ganyan"
version = "0.1.0"
description = "Turkish horse racing prediction system"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "flask>=3.0",
    "typer>=0.12",
    "numpy>=1.26",
    "pandas>=2.0",
    "lightgbm>=4.3",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "factory-boy>=3.3",
]
bayes = [
    "pymc>=5.10",
    "arviz>=0.18,<1.0",
]

[project.scripts]
ganyan = "ganyan.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ganyan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
